Fix text input width on mobile

--- a/src/styles/_b-input-text.scss
+++ b/src/styles/_b-input-text.scss
@@ -4,8 +4,8 @@
   }
   &__input {
     display: block;
-    width: 25em;
-    max-width: 100%;
+    max-width: 25em;
+    width: 100%;
     margin-top: 0.5em;
     font-size: $base-font-size;
     padding: 0.5em;
